# lr-navigation2

nav2_bringup/: CMakeLists.txt  package.xml
nav2_bringup/launch/: bringup_launch.py  tb3_simulation_launch.py
nav2_bringup/maps/: map.pgm  map_old.yaml  map_v1.pgm  map_v1.yaml  map_v2.yaml  map_v3.yaml  map_v4.pgm  map_v4.yaml
nav2_bringup/params/: nav2_params.yaml
nav2_bringup/rviz/: svd.rviz
nav2_bringup/scripts/: autonomy_command.cpp  robot_path_tracker.py
nav2_bringup/urdf/: lr_rover.urdf
nav2_system_tests/: CMakeLists.txt  package.xml
